Add basic Css structure with logo image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Harry Potter Quiz</title>
 </head>
 <body>
+    <header id="logo-header">
+    <img id="logo" src="assets/images/harry-potter.png" alt="Harry Potter logo">
+    </header>
     
     <div class="welcome-screen">
         <button id="welcome-button">Begin</button>
