Fix Bugs with images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </span>
             </div>
             <div class="timer-div">
-                <img id="time-turner" src="assets/images/timeturner.png" alt="Hermione's Timeturner" width="30px">
+                <img id="time-turner" src="assets/images/timeturner.png" alt="Hermione's Timeturner">
                 <span class="time-left">10s</span>
             </div>
         </div>
