Format documents and fix lint issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Harry Potter Quiz</title>
 </head>
+
 <body>
     <header id="logo-header">
-    <img id="logo" src="assets/images/harry-potter.png" alt="Harry Potter logo">
+        <img id="logo" src="assets/images/harry-potter.png" alt="Harry Potter logo">
     </header>
-    
+
     <div class="welcome-screen">
         <button class="button glow-effect" id="welcome-button" data-glow-offset="true">
             Begin
             <svg class="glow-container">
-              <rect pathLength="100" stroke-linecap="round" class="glow-blur"></rect>
-              <rect pathLength="100" stroke-linecap="round" class="glow-line"></rect>
+                <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
+                <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
             </svg>
-          </button>
+        </button>
     </div>
     <div id="quiz-container">
         <div class="header">
@@ -43,28 +45,30 @@
         <button class="button glow-effect" id="restart-button" data-glow-offset="true">
             Restart
             <svg class="glow-container">
-              <rect pathLength="100" stroke-linecap="round" class="glow-blur"></rect>
-              <rect pathLength="100" stroke-linecap="round" class="glow-line"></rect>
+                <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
+                <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
             </svg>
-          </button>
+        </button>
     </div>
 
     <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" 
-                    aria-label="Visit our Twitter page(opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page(opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" 
-                    aria-label="Visit our Youtube page(opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page(opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" 
+                <a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
@@ -73,4 +77,5 @@
     <script src="https://kit.fontawesome.com/9e28a51ae8.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
